# stitch_test

./: .gitignore  CMakeLists.txt  ImageData.cpp  ImageData.h  Readme.md  Stitcher.cpp  Stitcher.h  frameprocessor.cpp  frameprocessor.hpp  geotransform.cpp  geotransform.hpp  imagedata.hpp  istitcher.hpp  movesetimator.cpp  movesetimator.hpp  singleframestitcher.cpp  singleframestitcher.hpp  srt_data_and_explanation.txt  stitch_test.cpp  stitcherpipeline.cpp  stitcherpipeline.hpp
